--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.19.3",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
